Changelog
=========

1.0RC1 (unreleased)
-------------------

- Fix document_byline bottom margin if commenter images are disabled.
  [timo]

- Dynamically show the comment formatting message dependent on the text
  transform setting.
  [timo]

- Description for text transform added to the discussion control panel.
  [timo]

- Move the discussion control panel to the core Plone configuration.
  [timo]

- Always set the effective date of a comment to the same value as the creation
  date. 
  [timo]

- Fix SMTP exception when an email is send to the moderator.
  [timo]

- Make sure comment UIDs in the catalog are always unique. This fixes  
  http://dev.plone.org/plone/ticket/10652. 
  [timo] 

- Fix 'check all' on batch moderation page.
  [davisagli]

- Use safe_unicode to decode the title of the content. encode("utf-9") caused 
  Dexterity based content types to raise a unicode decode error. This fixes 
  http://dev.plone.org/plone/ticket/11292
  [dukebody] 

- Spanish translation updated.
  [dukebody]

- Catalan translation added.
  [sneridagh]

- Convert anonymous-supplied name to unicode as done for authenticated members.
  [ggozad]

- Catch SMTP exceptions when sending email notifications.
  [timo]

- Updated italian translation.
  [keul]


1.0b12 (2010-11-04)
-------------------

- Remove AJAX comment deletion binding. This function relies on the nextUntil() 
  selector introduced by jQuery 1.4 and therefore breaks in Plone 3 
  (that currently uses jQuery 1.3.2).
  [timo]


1.0b11 (2010-11-03)
-------------------

- Fix Dutch and Czech language code and name.
  [timo]

- Re-add the CommentsViewlet can_manage method. This method has been removed
  in version 1.0b9 and added again in 1.0b11 because we don't want to change
  the API in beta releases.
  [timo]

- Declare z3c.form and zope.schema as minimum version dependencies in setup.py
  in case people use a different KGS.
  [timo]

- Add and update es and eu l10ns.
  [dukebody, on behalf of erral]
